= 2.0.18 =
# Fixed
- Fixed bug when trying generate label from order edit page on PS 1.7.0-1.7.6

# Changed
- Changed so that the Finland parcel terminal selection map uses the Matkahuolto name, logos and colors

# Improved
- Added missed translations to Lithuanian

= 2.0.17 =
# Improved
- Added an error message when trying to register a shipment with the COD service for sending to a Finland Matkahuolto parcel terminal

= 2.0.16 =
# Added
- Module configuration page accessible in product page, where user can select, which product must be treated as 18+

# Improved
- Label generation now checks if order products has 18+ mark. If yes adds additional service 'PC'.

= 2.0.15 =
# Fixed
- Fixed display of new orders on the Omniva orders page
- Fixed terminals list show on Prestashop 1.6

# Updated
- API library to 1.0.15

= 2.0.14 =
# Updated
- Added Finland terminal selection for Estonian customers (Finland carrier option must be enabled)
- API library to 1.0.14
- Changed bulk action dropdown detection for PS 1.7.7+ versions

= 2.0.13 =
# Updated
- API library to 1.0.13

# Fixed
- Fixed error when Order history element is empty
- hookHeader fron js and css file embed forprestashop 1.6 when prestashop is in subfolder

= 2.0.12 =
# Fixed
- Fixed that courier call time will get from settings

= 2.0.11 =
# Changed
- Changed error field type to let storage of larger error messages
- Changed cod_amount field type to Decimal 8,2 - this allows a maximum COD amount of 999999.99
- When registering with set multiple packages, weight is distributed by number of packages (eg. 2 pck 30kg -> 15kg each)

# Improved
- It has been made that in the Omniva order list, the "New" tab does not show orders by status that are not relevant for shipping.

= 2.0.9 =
# Changed
- Changed how order history is added. Instead of using add() it will be added using addWithEmail().
    This allows Prestashop to send email if user has set email template on Omniva custom order statuses.

= 2.0.8 =
# Fixed